--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,23 +5,28 @@ version = "0.1.0"
 edition = "2021"
 authors = ["Cédric Eberhardt"]
 
-
 [dependencies]
-egui = "0.25.0"
-eframe = { version = "0.25.0", default-features = false, features = [
+egui = "0.25"
+eframe = { version = "0.25", default-features = false, features = [
     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
 log = "0.4"
-
-# You only need serde if you want app persistence:
+regex = "1.10"
+reqwest = "0.11"
+roxmltree = "0.19"
 serde = { version = "1", features = ["derive"] }
+toml = "0.8"
+unicode-segmentation = "1.10"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+clap = { version = "4.4", features = ["derive"] }
+console = "0.15"
 env_logger = "0.10"
+tokio = { version = "1.35", features = ["full"] }
 
 # web:
 [target.'cfg(target_arch = "wasm32")'.dependencies]
