--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,7 +34,17 @@ wasm-bindgen-futures = "0.4"
 
 
 [profile.release]
-opt-level = 2 # fast and small wasm
+lto = true
+opt-level = 2
+
+# Defines a size-optimized profile for the WASM bundle in release mode
+[profile.wasm-release]
+inherits = "release"
+opt-level = "z"
+lto = true
+codegen-units = 1
+panic = "abort"
+strip = true
 
 # Optimize all dependencies even in debug builds:
 [profile.dev.package."*"]
