--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,13 +6,14 @@ edition = "2021"
 authors = ["Cédric Eberhardt"]
 
 [dependencies]
-egui = "0.25"
 eframe = { version = "0.25", default-features = false, features = [
     "accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
     "default_fonts", # Embed the default egui fonts.
     "glow",          # Use the glow rendering backend. Alternative: "wgpu".
     "persistence",   # Enable restoring app state when restarting the app.
 ] }
+egui = "0.25"
+egui_extras = "0.25"
 log = "0.4"
 regex = "1.10"
 reqwest = "0.11"
@@ -20,6 +21,7 @@ roxmltree = "0.19"
 serde = { version = "1", features = ["derive"] }
 toml = "0.8"
 unicode-segmentation = "1.10"
+wasm-bindgen-futures = "0.4"
 
 # native:
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
